--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 .App {
-  width: 500px;
-  margin-left: 25%;
-  margin-right: 25%;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
   text-align: start;
 }
 
 .container {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+h3{
+  margin-top: 50px;
+  margin-bottom: 10px;
 }
