--- a/src/component/TodoList.css
+++ b/src/component/TodoList.css
@@ -1,7 +1,8 @@
 .search {
-    width: 100%;
-    padding: 15px 0px 15px 2px;
+    width: 495px;
+    padding: 15px 0px 15px 5px;
     border: none;
     border-bottom: 1px solid gray;
-
+    border-radius: 0;
+    margin-bottom: 8px;
 }
